# Rendr

./: CMakeLists.txt  math.cpp  model.h
src/: main.cpp  math.h  model.cpp  ray_tracer.cpp  ray_tracer.h  renderer.h  texture.cpp  texture.h  window.cpp  window.h
src/CGL/: base64.cpp  color.cpp  color.h  lodepng.cpp  lodepng.h  misc.h  svg.cpp  svg.h  svgparser.cpp  svgparser.h  tinyxml2.cpp  tinyxml2.h  triangulation.cpp  triangulation.h
src/math/: matrix3x3.cpp  matrix3x3.h  transform.cpp  transform.h  triangulation.cpp  triangulation.h  vector2D.cpp  vector2D.h  vector3D.cpp  vector3D.h  vector4D.cpp  vector4D.h
